--- a/css/styles.css
+++ b/css/styles.css
@@ -10,21 +10,25 @@ main {
   margin-top: 0;
   padding-top: 0;
   flex: 1;
-
 }
 
 body {
   background-image: none;
-  font-family: 'lato', sans-serif;
+  font-family: "lato", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  display: flex; 
+  display: flex;
   flex-direction: column;
   overflow-x: hidden;
 }
 
+html,
+body {
+  overflow-x: hidden;
+  max-width: 100%;
+}
 
 .centered {
   display: flex;
@@ -33,9 +37,8 @@ body {
   text-align: center;
 }
 
-
-.footer { 
-  font-family: 'lato', sans-serif;
+.footer {
+  font-family: "lato", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -45,20 +48,14 @@ body {
 .breadcrumbs {
   display: flex;
   margin: 0;
-
 }
 
 .breadcrumbs ul {
   display: flex;
-
 }
 .breadcrumbs li {
   list-style: none;
-
 }
-
-
-
 
 .breadcrumbs li:not(:last-child)::after {
   content: ">";
@@ -66,18 +63,16 @@ body {
 }
 
 .chat-box {
-width: 45px;
-height: 45px;
-position: fixed;
-right: 10px;
-bottom: 200px;
-margin-bottom: 20px;
+  width: 45px;
+  height: 45px;
+  position: fixed;
+  right: 10px;
+  bottom: 200px;
+  margin-bottom: 20px;
 }
 .chat-box :hover {
   cursor: pointer;
-
 }
-
 
 a {
   text-decoration: none;
@@ -86,7 +81,6 @@ a {
 
 .coming-soon {
   position: relative;
-
 }
 
 .sign-in {
@@ -98,14 +92,13 @@ a {
 }
 
 .sign-in-button {
-    background-color: #b3b1b1;
+  background-color: #b3b1b1;
 
-    
-    color: black;
-    border: none;
-    border-radius: 5px;
+  color: black;
+  border: none;
+  border-radius: 5px;
 
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .empty-cart-drawer-overlay {
@@ -124,7 +117,7 @@ a {
   flex-direction: column;
   width: min(450px, 90vw);
   height: 350px;
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
 
 .empty-cart-header {
@@ -148,8 +141,6 @@ body:target .empty-cart-drawer-overlay {
   max-width: 100vw;
 }
 
-
-
 /* always used  */
 
 legend {
@@ -158,14 +149,20 @@ legend {
   font-size: 20px;
 }
 
-h1, h2, h3, h4, h5, h6, label {
-  font-family: 'montserrat', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+label {
+  font-family: "montserrat", sans-serif;
 }
 
 button {
-  font-family: 'poppins', sans-serif;
+  font-family: "poppins", sans-serif;
   font-weight: bold;
-  text-transform: uppercase; 
+  text-transform: uppercase;
   letter-spacing: 4px;
   width: fit-content;
   height: fit-content;
@@ -175,8 +172,3 @@ button {
 :hover {
   transition: all 0.3s ease;
 }
-
-
-
-
-
